modify javascript structure

--- a/AdminClient/adminConsole.html
+++ b/AdminClient/adminConsole.html
@@ -4,13 +4,13 @@
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="css/style.css" />
+	<script src="js/Login.js"></script>
+	<script src="js/security/JsEncrypt.js"></script>
 	<script src="http://code.jquery.com/jquery-3.2.1.js"></script>
-	<script language="JavaScript" type="text/javascript" src="js/JsEncrypt.js"></script>
-	<script language="JavaScript" src="js/Login.js"></script>
-	<script src="js/cryptojs/rollups/aes.js"></script>
-	<script src="js/cryptojs/components/mode-ctr-min.js"></script>
-	<script src="js/cryptojs/components/pad-nopadding.js"></script>
-	<script language="JavaScript" src="js/MessageCoder.js"></script>
+	<script src="js/security/cryptojs/rollups/aes.js"></script>
+	<script src="js/security/cryptojs/components/mode-ctr-min.js"></script>
+	<script src="js/security/cryptojs/components/pad-nopadding.js"></script>
+	<script language="JavaScript" src="js/security/MessageCoder.js"></script>
 	<script language="javascript">
 		var ws = null;
 		var mainStage=null;
