--- a/AdminClient/adminConsole.html
+++ b/AdminClient/adminConsole.html
@@ -11,6 +11,7 @@
 	<script src="js/security/cryptojs/components/mode-ctr-min.js"></script>
 	<script src="js/security/cryptojs/components/pad-nopadding.js"></script>
 	<script language="JavaScript" src="js/security/MessageCoder.js"></script>
+	<script language="JavaScript" src="js/ui/Server.js"></script>
 	<script language="javascript">
 		var ws = null;
 		var mainStage=null;
