--- a/AdminClient/mail/def.html
+++ b/AdminClient/mail/def.html
@@ -139,7 +139,7 @@
 	<!-- Page content -->
 	<div class="w3-main" style="margin-left:320px;">
 		<a class="w3-button w3-white w3-hide-large w3-xlarge w3-margin-left w3-margin-top" onclick="w3_open()">&#x2630;</a>
-		<!--a href="javascript:void(0)" class="w3-hide-large w3-red w3-button w3-right w3-margin-top w3-margin-right" onclick="document.getElementById('userDetailPage').style.display='block'">&#x270E;</a-->
+		<a href="javascript:void(0)" class="w3-hide-large w3-red w3-button w3-right w3-margin-top w3-margin-right" onclick="document.getElementById('userDetailPage').style.display='block'">&#x270E;</a>
 		<div id="mainStage">
 		</div>
 	</div>
