almost complete user table

--- a/AdminClient/mail/userTable4.html
+++ b/AdminClient/mail/userTable4.html
@@ -74,7 +74,7 @@
 				</thead>
 				<tbody>
 					<tr>
-						<td data-order="0">anonymous</td>
+						<td >anonymous</td>
 						<td></td>
 						<td align=center><a href="javascript:void(0)" onclick="addDirAccess(0)">&#x271A;</a></td>
 						<td align=center><input value="1" type=checkbox id="isUserEnable0"></td>
