--- a/AdminClient/mail/userTable2.5.html
+++ b/AdminClient/mail/userTable2.5.html
@@ -10,53 +10,69 @@
 			}
 			.toolbar 
 			{
-    		float: left;
+				float: left;
+				font-size:20px;
+				cursor:pointer;
+			}
+			.directoryAccess
+			{
+				cursor:pointer;
+			}
+			.removeNewUserEntry
+			{
+				cursor:pointer;
+				font-size:30px
 			}
 		</style>		
 		<script src="http://code.jquery.com/jquery-3.2.1.js"></script>
 		<script type="text/javascript" language="javascript" src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
 		<script>
+			
 			$(document).ready(function() {
-			   var t = $('#example').DataTable({
+			   var t = $('#userTable').DataTable({
 					"dom": '<"toolbar">frtip',
-				  "CaseSensitive":true, 
+					"CaseSensitive":true, 
 					"order": [[ 1, "asc" ]],
 					paging: true,
-					"pageLength": 5,
+					"pageLength": 10,
 					"info": true,
+					responsive: true,
 					"orderCellsTop": true, 
 					"fixedHeader":true,
 					"columnDefs":[{"className": "dt-center", "targets": [2,3,4]},
-								  			{"targets":[1,2,4],"orderable": false}],
+								  {"targets":[1,2,4],"orderable": false}],
 				 	columns: [{data: "User Name"}, 
 				 						{data: "Password"}, 
 				 						{data: "Directory Access"}, 
 				 						{data: "Enabled"}, 
 				 						{data: "Action"}]
-			   });
-				 $("div.toolbar").html("&nbsp;&#x271A;");												
-
-			   $('div.toolbar').on('click', function() {
-						 //add obj instead of array
-						 console.log("adding data...");
+				});
+				$("div.toolbar").html("&nbsp;&#x271A;");												
+				
+				$('div.toolbar').on('click', function() {
+						 var i=t.data().count();	
 						 var row=t.row.add({
-						   "User Name": "<input type=\"text\">",
-						   "Password": "<input type=\"password\">",
-						   "Directory Access": "<a onclick=\"addDirAccess(0)\">&#x271A;</a>",
-						   "Enabled": "<input value=\"1\" type=checkbox id=\"isUserEnable0\">",
-						   "Action": "<span style=\"font-size:30px\">&#x1F5D1;</span>"
+						   "User Name": "<input type=\"text\" id=\"userName"+i+"\">",
+						   "Password": "<input type=\"password\" id=\"password"+i+"\">",
+						   "Directory Access": "<a class=\"directoryAccess\">&#x271A;</a><input type=\"hidden\" id=\"directoryAccess"+i+"\">",
+						   "Enabled": "<input value=\"1\" type=checkbox id=\"isUserEnable"+i+"\">",
+						   "Action": "<span class=\"removeNewUserEntry\">&#x1F5D1;</span>"
 						 }).draw();
+						 $("span.removeNewUserEntry").on("click",function(){
+												$(this).parents("tr").remove();
+											});
 			   });
-
-			   // Automatically add a first row of data
-			   //$('#addRow').click();
-
+			   $("a.directoryAccess").on("click",function()
+												{
+													console.log("directory access");
+												});
+			   
 			 });
 
 		</script>
 	</head>
 	<body>
-		<table id="example" class="display">
+		<table id="userTable" class="display">
 		  <thead>
 			<tr>
 			  <th>User Name</th>
@@ -68,45 +84,14 @@
 		  </thead>
 		  <tbody>
 			<tr>
-			  <td>anonymous</td>
+			  <td><input type="hidden" value="anonymous" id="userName0" disabled style="border:none">anonymous</td>
 			  <td></td>
-			  <td align=center><a href="javascript:void(0)" onclick="addDirAccess(0)">&#x271A;</a></td>
+			  <td align=center><a class="directoryAccess">&#x271A;</a><input type="hidden" id="directoryAccess0"></td>
 			  <td align=center>
 					<input value="1" type=checkbox id="isUserEnable0">
 			  </td>
 			  <td></td>
 			</tr>
-<tr>
-		<td><input type=hidden id="userName0" readonly style="border:none" value="anonymous">abc</td>
-		<td></td>
-		<td align=center><a href="javascript:void(0)" onclick="addDirAccess(0)">&#x271A;</a></td>
-		<td><input value="1" type=checkbox id="isUserEnable0"></td>
-		<td></td>
-	</tr>
-	<tr>
-		<td><input type=hidden id="userName0" readonly style="border:none" value="anonymous">ab</td>
-		<td></td>
-		<td align=center><a onclick="addDirAccess(0)">&#x271A;</a></td>
-		<td><input value="1" type=checkbox id="isUserEnable0"></td>
-		<td></td>
-	</tr>			
-
-<tr>
-		<td data-order="11">stamn</td>
-		<td><input type=password id="password1"></td>
-		<td align=center><a href="javascript:void(0)" onclick="addDirAccess(0)">&#x271A;</a></td>
-		<td><input value="1" type=checkbox id="isUserEnable0"></td>
-		<td></td>
-	</tr>
-
-	<tr>
-		<td data-order="10">tmchan</td>
-		<td><input type=password id="password1"></td>
-		<td align=center><a href="javascript:void(0)" onclick="addDirAccess(1)">&#x271A;</a></td>
-		<td><input value="1" type=checkbox id="isUserEnable1"></td>
-		<td style="font-size:30px">&#x1F5D1;</td>
-	</tr>	
-	
 		  </tbody>
 		  <tfoot>
 			<tr>
