--- a/AdminClient/mail/def.html
+++ b/AdminClient/mail/def.html
@@ -77,7 +77,7 @@
 	</nav>
 	 
 	<!-- Modal that pops up when you click on "New Message" -->
-	<div id="userDetailPage" class="w3-modal" style="z-index:4">
+	<div id="userDetailPage" class="" style="z-index:4">
 	  <div class="w3-modal-content w3-animate-zoom">
 		<div class="w3-container w3-padding w3-red">
 		   <span onclick="document.getElementById('userDetailPage').style.display='none'"
@@ -93,32 +93,41 @@
 			<tr>
 				<td><input type=text id="virtualDir0"></td>
 				<td>
-					<div class="remoteDir">
+					<div class="">
 						<ul style="padding:0;margin:0">
 							<li style="display:list-item;margin:0;list-style:none;padding:0;">
-								<a href="#" style="text-decoration:none">&#x1F5C0;</a>
+								<a href="#" style="text-decoration:none">&#x1F4C2; open file folder
+							</li>	
+							<li style="display:list-item;margin:0;list-style:none;padding:0;">
+								<a href="#" style="text-decoration:none">&#x1F5C0; folder</a>
 							</li>
 							<li style="display:list-item;margin:0;list-style:none;padding:0;">
-								<a href="#" style="text-decoration:none">&#x1F517;</a>
+								<a href="#" style="text-decoration:none">&#x1F517; link symbol</a>
 							</li>
 							<li style="display:list-item;margin:0;list-style:none;padding:0;">
-								<a href="#" style="text-decoration:none">&#x1F5C5;</a>
+								<a href="#" style="text-decoration:none">&#x1F5C5; file</a>
 							</li>
 							<li style="display:list-item;margin:0;list-style:none;padding:0;">
-								<a href="#" style="text-decoration:none">&#x1F5C8;</a>
+								<a href="#" style="text-decoration:none">&#x1F5C8; note</a>
 							</li>
 							<li style="display:list-item;margin:0;list-style:none;padding:0;">
-								<a href="#" style="text-decoration:none">&#x1F5C9;</a>
+								<a href="#" style="text-decoration:none">&#x1F5C9; note page</a>
 							</li>
 							<li style="display:list-item;margin:0;list-style:none;padding:0;">
-								<a href="#" style="text-decoration:none">&#x1F5CB;</a>
+								<a href="#" style="text-decoration:none">&#x1F5CB; empty document </a>
 							</li>
 							<li style="display:list-item;margin:0;list-style:none;padding:0;">
-								<a href="#" style="text-decoration:none">&#x1F5CE;</a>
+								<a href="#" style="text-decoration:none">&#x1F5CE; document</a>
 							</li>
 							<li style="display:list-item;margin:0;list-style:none;padding:0;">
-								<a href="#" style="text-decoration:none">&#x1F5D1;</a>
+								<a href="#" style="text-decoration:none">&#x1F5D1; wastebasket</a>
 							</li>
+							<li style="display:list-item;margin:0;list-style:none;padding:0;">
+								<a href="#" style="text-decoration:none">&#x1F5C1; open folder</a>
+							</li>	
+							<li style="display:list-item;margin:0;list-style:none;padding:0;">
+								<a href="#" style="text-decoration:none">&#x1F5BF; black folder</a>
+							</li>	
 						</ul>
 					</div>
 					<input type=text id="homeDir">
