Objectize the web page

--- a/AdminClient/object/c.html
+++ b/AdminClient/object/c.html
@@ -57,12 +57,12 @@
 		<script src="js/ui/AdminServerUI.js"></script>
 		<script src="js/ui/FtpServerUI.js"></script>
 		<script src="js/ui/ModalList.js"></script>
-		<script src="js/ui/AdminPage.js"></script>
+		<script src="js/ui/AdminPageControl.js"></script>
 		<script>
 			var adminPage;		
 			$(document).ready(function() 
 			{
-				adminPage=new AdminPage();
+				adminPage=new AdminPageControl();
 			});			
 		</script>
 	</head>
