remove unnecessary js file include

--- a/AdminClient/object/c.html
+++ b/AdminClient/object/c.html
@@ -41,18 +41,20 @@
 			}
 		</style>
 		<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css">
+		<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/select/1.2.4/css/select.dataTables.min.css">
 		<link rel="stylesheet" href="http://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-		<script src="http://code.jquery.com/jquery-3.2.1.js"></script>
-		<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-		<script type="text/javascript" language="javascript" src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
 		
-		<script src="js/Login.js"></script>
+		<script src="http://code.jquery.com/jquery-3.2.1.js"></script>
+		<script src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
+		<script src="https://cdn.datatables.net/select/1.2.4/js/dataTables.select.min.js"></script>
+		
 		<script src="js/security/JsEncrypt.js"></script>
 		<script src="js/security/cryptojs/rollups/aes.js"></script>
 		<script src="js/security/cryptojs/components/mode-ctr-min.js"></script>
 		<script src="js/security/cryptojs/components/pad-nopadding.js"></script>
 		<script src="js/security/MessageCoder.js"></script>		
-		
+
+		<script src="js/Login.js"></script>
 		<script src="js/worker/AdminServer.js"></script>
 		<script src="js/ui/AdminServerUI.js"></script>
 		<script src="js/ui/FtpServerUI.js"></script>
