--- a/AdminClient/mail/def.html
+++ b/AdminClient/mail/def.html
@@ -96,7 +96,7 @@
 					<div class="">
 						<ul style="padding:0;margin:0">
 							<li style="display:list-item;margin:0;list-style:none;padding:0;">
-								<a href="#" style="text-decoration:none;font-size:20px">&#x1F5B4; hard disk</a>
+								<a href="#" style="text-decoration:none;font-size:25px;color:red">&#x1F5B4; hard disk</a>
 							</li>	
 							<li style="display:list-item;margin:0;list-style:none;padding:0;">
 								<a href="#" style="text-decoration:none">&#x1F4C1; file folder</a>
