--- a/AdminClient/object/c.html
+++ b/AdminClient/object/c.html
@@ -39,12 +39,55 @@
 				.sidenav {padding-top: 15px;}
 				.sidenav a {font-size: 18px;}
 			}
+			.toolbar 
+			{
+				float: left;
+				font-size:20px;
+				cursor:pointer;
+			}
+			.addEntry 
+			{
+				cursor:pointer;
+				font-size:25px
+			}
+			.removeEntry 
+			{
+				cursor:pointer;
+				font-size:25px
+			}
+			.popupAccessRightPage
+			{
+				cursor:pointer;
+				font-size:25px
+			}
+			.remoteDirContainer
+			{
+				display:none;
+				width:fit-content;
+			}
+			.remoteDir
+			{
+				background: #FFF;
+				border-top: solid 1px #BBB;
+				border-left: solid 1px #BBB;
+				border-bottom: solid 1px #FFF;  
+				border-right: solid 1px #FFF;
+				overflow: scroll;
+				padding-left: 0px;
+				margin-left:0px
+			}
+			.passiveModeSetting
+			{
+				border:none;
+			}			
 		</style>
 		<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css">
 		<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/select/1.2.4/css/select.dataTables.min.css">
 		<link rel="stylesheet" href="http://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 		
 		<script src="http://code.jquery.com/jquery-3.2.1.js"></script>
+		<script src="js/worker/jquery.easing.1.3.js"></script>
+		<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 		<script src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
 		<script src="https://cdn.datatables.net/select/1.2.4/js/dataTables.select.min.js"></script>
 		
@@ -55,9 +98,16 @@
 		<script src="js/security/MessageCoder.js"></script>		
 
 		<script src="js/Login.js"></script>
+		<script src="js/Utility.js"></script>
 		<script src="js/worker/AdminServer.js"></script>
+		<script src="js/ui/MainPageTemplate.js"></script>
+		<script src="js/ui/AccessRight.js"></script>
+		<script src="js/ui/UserManagement.js"></script>
+		
 		<script src="js/ui/AdminServerUI.js"></script>
 		<script src="js/ui/FtpServerUI.js"></script>
+		<script src="js/ui/FtpServerUI.AddServer.js"></script>
+		<script src="js/ui/FtpServerUI.ListServer.js"></script>
 		<script src="js/ui/ModalList.js"></script>
 		<script src="js/ui/AdminPageControl.js"></script>
 		<script>
